--- a/SmartShopMobileApp/Views/HomeView.xaml
+++ b/SmartShopMobileApp/Views/HomeView.xaml
@@ -2,11 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.HomeView"
-             Title="HomeView">
+             xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels" 
+             x:DataType="viewModels:HomeViewModel"
+             Title="Home">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        
+        <Button Text="Open scanner"
+                TextTransform="None"
+                CornerRadius="5"
+                TextColor="#FFFFFF"
+                Padding="2,0,2,0"
+                BackgroundColor="#8A1C23"
+                WidthRequest="104"
+                HeightRequest="40"
+                HorizontalOptions="FillAndExpand"
+                Command="{Binding OpenScannerCommand}"/>             
+                       
     </VerticalStackLayout>
 </ContentPage>
