--- a/SmartShopMobileApp/Views/BarcodeScanner.xaml
+++ b/SmartShopMobileApp/Views/BarcodeScanner.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:cv="clr-namespace:Camera.MAUI;assembly=Camera.MAUI"
              x:Class="SmartShopMobileApp.Views.BarcodeScanner"
              Title="BarcodeScanner">
     <ScrollView>
@@ -10,8 +11,15 @@
             VerticalOptions="Center">
 
             <Label x:Name="barcodeResult" FontSize="20"/>
-            <!--<cv:CameraView x:Name="cameraView" WidthRequest="300" HeightRequest="200" CamerasLoaded="cameraView_CamerasLoaded" BarCodeDetectionEnabled="True"
-                           BarcodeDetected="cameraView_BarcodeDetected"/>-->
+            <cv:CameraView x:Name="cameraView" 
+                           WidthRequest="500"
+                           HeightRequest="500"
+                           CamerasLoaded="cameraView_CamerasLoaded"
+                           BarCodeDetectionEnabled="True"
+                           BarcodeDetected="cameraView_BarcodeDetected"
+                           
+                           
+                          />
 
         </VerticalStackLayout>
     </ScrollView>
