Modified the navigation bar with new pages

--- a/SmartShopMobileApp/Views/Navigation.xaml
+++ b/SmartShopMobileApp/Views/Navigation.xaml
@@ -16,5 +16,13 @@
     <views:BarcodeScannerView
         Title="Scan product"
         IconImageSource="scanner.png"/>
-    
+
+    <views:ShoppingCartView
+        Title="My cart"
+        IconImageSource="cart.png"/>
+
+    <views:ProfileView
+        Title="Profile"
+        IconImageSource="profile.png"/>
+
 </TabbedPage>
