Fixed the navigation bug

--- a/SmartShopMobileApp/AppShell.xaml
+++ b/SmartShopMobileApp/AppShell.xaml
@@ -13,5 +13,12 @@
         <ShellContent Title="Scan product"  
                       Icon="scanner.png"
                       ContentTemplate="{DataTemplate local:BarcodeScannerView}" />
+        <ShellContent Title="My cart"  
+                      Icon="cart.png"
+                      ContentTemplate="{DataTemplate local:ShoppingCartView}" />
+        <ShellContent Title="Profile"  
+                      Icon="profile.png"
+                      ContentTemplate="{DataTemplate local:ProfileView}" />
     </TabBar>
+
 </Shell>
