--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SmartShopMobileApp.Views.ShoppingCartView"
+             xmlns:icon="clr-namespace:SmartShopMobileApp"
              xmlns:viewModels="clr-namespace:SmartShopMobileApp.ViewModels" 
              xmlns:model="clr-namespace:DTO;assembly=DTO"
              Title="My shopping cart">
@@ -21,8 +22,25 @@
 
                                 <StackLayout Grid.Column="1" VerticalOptions="Center">
                                     <Label Text="{Binding Name}" Margin="10,0,0,0" FontFamily="Poppins-Bold" TextColor="#2B0B98" FontSize="16" />
-                                    <Label Text="{Binding Quantity}" Margin="20,0,0,0"   FontSize="16" />
+                                    <StackLayout Orientation="Horizontal" >
+                                        <Label Text="Quantity:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
+                                        <Label Text="{Binding Quantity}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16" />
+                                        
+                                    </StackLayout>
+                                    
                                 </StackLayout>
+                                <Button Text="{x:Static icon:IconFont.Delete}"
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:ShoppingCartViewModel}}, Path=DeleteCartItemCommand}"
+                                        CommandParameter="{Binding ProductId}"
+                                        Grid.Column="1"
+                                        TextColor="Gray"
+                                        HorizontalOptions="EndAndExpand"
+                                        Style="{x:StaticResource GoogleFont}"
+                                        BackgroundColor="Transparent"
+                                        HeightRequest="50"
+                                        WidthRequest="50"/>
+
+
                             </Grid>
                         </Frame>
                     </Grid>
