--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -31,7 +31,7 @@
                                 </StackLayout>
                                 <Button Text="{x:Static icon:IconFont.Delete}"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:ShoppingCartViewModel}}, Path=DeleteCartItemCommand}"
-                                        CommandParameter="{Binding ProductId}"
+                                        CommandParameter="{Binding .}"
                                         Grid.Column="1"
                                         TextColor="Gray"
                                         HorizontalOptions="EndAndExpand"
