--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -7,7 +7,7 @@
              xmlns:model="clr-namespace:DTO;assembly=DTO"
              Title="My shopping cart">
     <VerticalStackLayout>
-        <CollectionView x:Name="SupermarketsList" ItemsSource="{Binding Products}">
+        <CollectionView x:Name="SupermarketsList" ItemsSource="{Binding Products}" HeightRequest="300">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:ProductDTO">
                     <Grid Padding="10,5,10,5">
@@ -27,7 +27,13 @@
                                         <Label Text="{Binding Quantity}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16" />
                                         
                                     </StackLayout>
-                                    
+                                    <StackLayout Orientation="Horizontal" >
+                                        <Label Text="Price:" Margin="10,0,0,0"  TextColor="Gray" FontSize="16"/>
+                                        <Label Text="{Binding Price}" Margin="10,0,0,0"  TextColor="Gray" FontSize="16" />
+
+                                    </StackLayout>
+
+
                                 </StackLayout>
                                 <Button Text="{x:Static icon:IconFont.Delete}"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type viewModels:ShoppingCartViewModel}}, Path=DeleteCartItemCommand}"
