--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -80,7 +80,7 @@
                    Margin="5,0,0,0"/>  
         </StackLayout>
 
-        <Button Text="Pay" FontSize="20" Margin="60,10,60,10" CornerRadius="20" BackgroundColor="Green"/>
+        <Button Text="Pay" Command="{Binding PayCommand}" FontSize="20" Margin="60,10,60,10" CornerRadius="20" BackgroundColor="Green"/>
 
     </VerticalStackLayout>
 </ContentPage>
