--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -73,7 +73,7 @@
                    FontSize="20"
                    TextColor="#2B0B98"
                    Margin="10,0,0,0"/>
-            <Label Text="$"
+            <Label Text="RON"
                    FontFamily="Poppins-Semibold"
                    FontSize="20"
                    TextColor="#2B0B98"
