--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -16,12 +16,12 @@
                FontSize="20"
                TextColor="#2B0B98"
                Margin="10,0,0,0"/>
-        <Image Source="{Binding ImageSource}" HeightRequest="120" WidthRequest="120" />
+        <Image Source="{Binding ImageSource}" HeightRequest="160" WidthRequest="160" />
         <Label Text="Your shopping cart is empty!" IsVisible="{Binding IsEmptyShoppingCartTextVisible}" 
                FontFamily="Poppins-Regular"
                FontSize="20"
-               TextColor="#2B0B98"
-               Margin="45,50,0,0"/>
+               TextColor="Grey"
+               Margin="50,30,0,0"/>
         <CollectionView x:Name="SupermarketsList" ItemsSource="{Binding Products}" HeightRequest="300">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:ProductDTO">
