--- a/SmartShopMobileApp/Views/ShoppingCartView.xaml
+++ b/SmartShopMobileApp/Views/ShoppingCartView.xaml
@@ -69,7 +69,7 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
-        <StackLayout Margin="0,0,10,0"
+        <StackLayout Margin="0,-10,10,0"
                      Orientation="Horizontal" 
                      VerticalOptions="CenterAndExpand" 
                      HorizontalOptions="CenterAndExpand">
@@ -77,7 +77,7 @@
                    FontFamily="Poppins-Regular"
                    FontSize="20"
                    TextColor="Gray"
-                   Margin="10,0,0,0"/>
+                   Margin="10,0,0,10"/>
             <Label Text="{Binding TotalAmount}"
                    FontFamily="Poppins-Semibold"
                    FontSize="20"
@@ -90,8 +90,8 @@
                    Margin="5,0,0,0"/>  
         </StackLayout>
 
-        <Button Text="Pay" Command="{Binding PayCommand}" FontSize="20" Margin="60,0,60,10" CornerRadius="20" BackgroundColor="Green"/>
-        <Button Text="Apply voucher" Command="{Binding ApplyVoucherCommand}" FontSize="20" Margin="60,10,60,10" CornerRadius="20" BackgroundColor="Pink"/>
+        <Button Text="Pay" Command="{Binding PayCommand}" FontSize="20" Margin="60,-15,60,10" CornerRadius="20" BackgroundColor="Green"/>
+        <Button Text="Apply voucher" Command="{Binding ApplyVoucherCommand}" HeightRequest="45" FontSize="18" Margin="110,10,110,10" CornerRadius="20" BackgroundColor="#2B0B98"/>
 
     </VerticalStackLayout>
 </ContentPage>
